# orchestrack

./: .gitmodules  CMakeLists.txt  README.md  orchestrack.kdev4
doc/dev/: format.md
doc/instr/dev/: format.md
doc/instr/sampler/: sampler.md  tech.md
share/orchestrack/lang/sampler/: en.tsv  es.tsv
src/: includes.h
src/effect/panama/: README.md
src/engine/: audio.cpp  engine.cpp  engine.h  lutgen.cpp  lutgen.h  pattern.h  project.h
src/engine/audio/: driver.h  jack.cpp  jack.h
src/file/: fextra.c  fextra.h
src/font/: font.cpp  font.h
src/format/: aiff.cpp  aiff.h  iff.cpp  iff.h  riff.cpp  riff.h  wave.cpp  wave.h
src/format/module/: loader.h  mod.h
src/instr/: instr.cpp  instr.h
src/instr/midi/: README.md
src/instr/mishka/: README.md
src/instr/phost/: README.md
src/instr/sampler/: README.md  audio.cpp  bench.cpp  dir.cpp  envedit.cpp  envsel.cpp  erase.cpp  error.cpp  grid.cpp  interp.cpp  kb.cpp  list.cpp  main.cpp  mouse.cpp  resize.cpp  sampler.cpp  sampler.h  sload.cpp  smpedit.cpp  ssel.cpp  state.cpp  summary.cpp
src/langs/: README.md  langs.cpp  langs.h
src/ui/: app.cpp  app.h  application.cpp  application.h  button.cpp  button.h  config.h  knob.cpp  knob.h  main.cpp  text.cpp  text.h
