cmake_minimum_required(VERSION 2.6)
project(orchestrack)
if (APPLE)
  include_directories(/usr/local/include)
  link_directories(/usr/local/lib)
endif (APPLE)
include_directories(lib/json/src)
add_executable(orchestrack src/ui/application.cpp src/ui/main.cpp)
add_executable(sampler src/instr/instr.cpp src/font/font.cpp src/instr/sampler/sampler.cpp src/instr/sampler/main.cpp)
target_link_libraries(orchestrack SDL2)
target_link_libraries(sampler SDL2 SDL2_ttf sndfile jack)
install(TARGETS orchestrack RUNTIME DESTINATION bin)
